--- a/desc.html
+++ b/desc.html
@@ -33,7 +33,7 @@
         <table class="tabla">
             <tr>
                 <td>
-                    <div class="card">
+                    <div class="torrediseño">
                         <img src="torrediseño.jpg" class="foto" alt="Diseño">
                     </div>
                 </td>
@@ -66,7 +66,7 @@ de temperatura.
                     </div>
                 </td>
                 <td>
-                    <div class="card2">
+                    <div class="hielo">
                         <img src="hielo.jpg" class="foto" alt="Enfriamiento">
                     </div>
                 </td>
@@ -83,7 +83,7 @@ de temperatura.
                     </div>
                 </td>
                 <td>
-                    <div class="card2">
+                    <div class="termometro">
                         <img src="termometro.avif" class="foto" alt="Termometro">
                     </div>
                 </td>
@@ -91,7 +91,7 @@ de temperatura.
             <br>
             <tr>
                 <td>
-                    <div class="card">
+                    <div class="aislante">
                         <img src="aislante.jpg" class="foto" alt="Material Aislante">
                     </div>
                 </td> 
