--- a/español.html
+++ b/español.html
@@ -55,7 +55,7 @@
                     </div>
                 </td>
                 <td>
-                    <div class="card">
+                    <div class="pensar">
                         <img src="pensar.jpg" class="foto" alt="Pensar">
                     </div>
                 </td>
@@ -63,7 +63,7 @@
             <br>
             <tr>
                 <td>
-                    <div class="card">
+                    <div class="torre">
                         <img src="torre.png" class="foto" alt="Torre">
                     </div>
                 </td>
@@ -88,7 +88,7 @@
                     </div>
                 </td>
                 <td>
-                    <div class="card">
+                    <div class="mision">
                         <img src="mision.png" class="foto" alt="Mision">
                     </div>
                 </td>
@@ -96,7 +96,7 @@
             <br>
             <tr>
                 <td>
-                    <div class="card">
+                    <div class="valores">
                         <img src="valores.png" class="foto" alt="Valores">
                     </div>
                 </td>
